APP03022-mrch.bff.somx.ppsomx.catalogos/kustomization/uat/env-var.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}
spec:
  template:
    spec:
      containers:
        - name: ${PROJECT_NAME}
